# cpp_SFML_CMake_template

./: CMakeLists.txt
